--- a/subs.css
+++ b/subs.css
@@ -1,18 +1,16 @@
 .subs-btn-mark-watched {
-    background-color: #4A4A4AB3;
+    background-image: url("markwatched.svg");
+    height: 24px;
+    width: 24px;
+    position: absolute;
+    bottom: 3px;
+    left: 3px;
     border: none;
-    border-radius: 4px;
-    color: white;
-    text-align: center;
-    text-decoration: none;
-
+    border-radius: 2px;
+    background-color: hsl(0, 0%, 6.7%);
+    opacity: .8;
     -webkit-transition-duration: 0.4s; /* Safari */
     transition-duration: 0.4s;
-}
-
-.subs-btn-mark-watched:hover {
-    background-color: #A8A8A8;
-    cursor: pointer;
 }
 
 .subs-btn-mark-watched:active {
