--- a/subs.css
+++ b/subs.css
@@ -1,5 +1,6 @@
 .subs-btn-mark-watched {
-    background-image: url("markwatched.svg");
+    background-image: url('images/markwatched.svg'), /*works in Firefox*/
+                      url('chrome-extension://__MSG_@@extension_id__/images/markwatched.svg'); /*works in Chrome*/
     height: 24px;
     width: 24px;
     position: absolute;
@@ -8,12 +9,17 @@
     border: none;
     border-radius: 2px;
     background-color: hsl(0, 0%, 6.7%);
-    opacity: .8;
+    opacity: .6;
     -webkit-transition-duration: 0.4s; /* Safari */
     transition-duration: 0.4s;
 }
 
+.subs-btn-mark-watched:hover {
+    opacity: .8;
+    cursor: pointer;
+}
+
 .subs-btn-mark-watched:active {
-    background-color: #4A4A4A;
+    opacity: 1.0;
     cursor: pointer;
 }
