--- a/subs.css
+++ b/subs.css
@@ -1,25 +1,24 @@
 .subs-btn-mark-watched {
-    background-image: url('images/markwatched.svg'), /*works in Firefox*/
-                      url('chrome-extension://__MSG_@@extension_id__/images/markwatched.svg'); /*works in Chrome*/
-    height: 24px;
-    width: 24px;
-    position: absolute;
-    bottom: 3px;
-    left: 3px;
-    border: none;
-    border-radius: 2px;
-    background-color: hsl(0, 0%, 6.7%);
-    opacity: .6;
-    -webkit-transition-duration: 0.4s; /* Safari */
-    transition-duration: 0.4s;
+  background-image: url('images/markwatched.svg'), /*works in Firefox*/ url('chrome-extension://__MSG_@@extension_id__/images/markwatched.svg'); /*works in Chrome*/
+  height: 24px;
+  width: 24px;
+  position: absolute;
+  bottom: 3px;
+  left: 3px;
+  border: none;
+  border-radius: 2px;
+  background-color: hsl(0, 0%, 6.7%);
+  opacity: .6;
+  -webkit-transition-duration: 0.4s; /* Safari */
+  transition-duration: 0.4s;
 }
 
 .subs-btn-mark-watched:hover {
-    opacity: .8;
-    cursor: pointer;
+  opacity: .8;
+  cursor: pointer;
 }
 
 .subs-btn-mark-watched:active {
-    opacity: 1.0;
-    cursor: pointer;
+  opacity: 1.0;
+  cursor: pointer;
 }
