--- a/subs.css
+++ b/subs.css
@@ -1,3 +1,8 @@
+.subs-btn-settings {
+  height: 24px;
+  background-image: url('images/icon_settings.svg'), /*works in Firefox*/ url('chrome-extension://__MSG_@@extension_id__/images/icon_settings.svg'); /*works in Chrome*/
+}
+
 .subs-btn-hide-watched-checked, .subs-btn-hide-watched-unchecked {
   opacity: .8;
 }
