--- a/subs.css
+++ b/subs.css
@@ -88,3 +88,19 @@ ytd-grid-video-renderer.style-scope.ytd-grid-renderer:hover .subs-btn-mark-watch
 #end.ytd-masthead {
   min-width: auto !important;
 }
+
+ytd-two-column-browse-results-renderer > #primary > ytd-rich-grid-renderer > #contents {
+  display: grid;
+  grid-template-columns: repeat(var(--ytd-rich-grid-items-per-row), 1fr);
+  max-width: calc(var(--ytd-rich-grid-content-max-width) + var(--ytd-rich-grid-item-margin));
+}
+ytd-two-column-browse-results-renderer > #primary > ytd-rich-grid-renderer > #contents > ytd-rich-section-renderer {
+  grid-column: 1 / -1;
+}
+ytd-two-column-browse-results-renderer > #primary > ytd-rich-grid-renderer > #contents > ytd-rich-grid-row,
+ytd-two-column-browse-results-renderer > #primary > ytd-rich-grid-renderer > #contents > ytd-rich-grid-row > #contents {
+  display: contents;
+}
+ytd-two-column-browse-results-renderer > #primary > ytd-rich-grid-renderer > #contents > ytd-rich-grid-row > #contents > ytd-rich-item-renderer {
+  width: calc(100% - var(--ytd-rich-grid-item-margin));
+}
