--- a/subs.css
+++ b/subs.css
@@ -92,7 +92,14 @@ ytd-grid-video-renderer.style-scope.ytd-grid-renderer:hover .subs-btn-mark-watch
 ytd-two-column-browse-results-renderer > #primary > ytd-rich-grid-renderer > #contents {
   display: grid;
   grid-template-columns: repeat(var(--ytd-rich-grid-items-per-row), 1fr);
-  max-width: calc(var(--ytd-rich-grid-content-max-width) + var(--ytd-rich-grid-item-margin));
+  max-width: var(--ytd-rich-grid-content-max-width);
+  width: calc(100% - 48px);
+}
+ytd-two-column-browse-results-renderer[page-subtype="subscriptions"] > #primary > ytd-rich-grid-renderer > #contents {
+  width: calc(100% - 32px);
+}
+ytd-two-column-browse-results-renderer[page-subtype="subscriptions"] #content.ytd-rich-section-renderer {
+  margin: 0 8px;
 }
 ytd-two-column-browse-results-renderer > #primary > ytd-rich-grid-renderer > #contents > ytd-rich-section-renderer {
   grid-column: 1 / -1;
