--- a/subs.css
+++ b/subs.css
@@ -91,7 +91,7 @@ ytd-grid-video-renderer.style-scope.ytd-grid-renderer:hover .subs-btn-mark-watch
 
 ytd-two-column-browse-results-renderer > #primary > ytd-rich-grid-renderer > #contents {
   display: grid;
-  grid-template-columns: repeat(var(--ytd-rich-grid-items-per-row), 1fr);
+  grid-template-columns: repeat(auto-fill, var(--osasoft-better-subscriptions-thumb-column-size, 25%));
   max-width: var(--ytd-rich-grid-content-max-width);
   width: calc(100% - 48px);
 }
