Transformed css to scss and autofixed linting

--- a/pages/settings/settings.scss
+++ b/pages/settings/settings.scss
@@ -1,22 +1,19 @@
 @import '../../common';
 
 body {
-  margin: 0;
-  font-family: "Segoe UI", Tahoma, sans-serif;
-  font-size: 12px;
+    margin: 0;
+    font-size: 12px;
+    font-family: 'Segoe UI', Tahoma, sans-serif;
 }
-
 h4 {
-  padding: 10px;
+    padding: 10px;
 }
-
 .settings__container {
-  margin: 0 auto;
-  max-width: 800px;
-  padding: 0 10px;
-  background-color: #f4f6ff;
+    max-width: 800px;
+    padding: 0 10px;
+    margin: 0 auto;
+    background-color: rgb(244, 246, 255);
 }
-
 button#watched\.clear {
-  color: red !important;
+    color: rgb(255, 0, 0) !important;
 }
