--- a/_common.scss
+++ b/_common.scss
@@ -1,9 +1,8 @@
-@import "spinner";
+@import 'spinner';
 
 .hidden {
-  display: none;
+    display: none;
 }
-
 .semitransparent {
-  opacity: 0.5 !important;
+    opacity: 0.5 !important;
 }
