--- a/_spinner.scss
+++ b/_spinner.scss
@@ -1,3 +1,5 @@
+@use 'sass:math';
+
 .sk-circle {
     position: relative;
     width: 30px;
@@ -21,81 +23,13 @@
             animation: sk-circleBounceDelay 1.2s infinite ease-in-out both;
         }
     }
-    .sk-circle2 {
-        transform: rotate(30deg);
+    @for $i from 1 through 11 {
+        .sk-circle#{$i + 1} {
+            transform: rotate(#{$i * 30}deg);
 
-        &::before {
-            animation-delay: -1.1s;
-        }
-    }
-    .sk-circle3 {
-        transform: rotate(60deg);
-
-        &::before {
-            animation-delay: -1s;
-        }
-    }
-    .sk-circle4 {
-        transform: rotate(90deg);
-
-        &::before {
-            animation-delay: -0.9s;
-        }
-    }
-    .sk-circle5 {
-        transform: rotate(120deg);
-
-        &::before {
-            animation-delay: -0.8s;
-        }
-    }
-    .sk-circle6 {
-        transform: rotate(150deg);
-
-        &::before {
-            animation-delay: -0.7s;
-        }
-    }
-    .sk-circle7 {
-        transform: rotate(180deg);
-
-        &::before {
-            animation-delay: -0.6s;
-        }
-    }
-    .sk-circle8 {
-        transform: rotate(210deg);
-
-        &::before {
-            animation-delay: -0.5s;
-        }
-    }
-    .sk-circle9 {
-        transform: rotate(240deg);
-
-        &::before {
-            animation-delay: -0.4s;
-        }
-    }
-    .sk-circle10 {
-        transform: rotate(270deg);
-
-        &::before {
-            animation-delay: -0.3s;
-        }
-    }
-    .sk-circle11 {
-        transform: rotate(300deg);
-
-        &::before {
-            animation-delay: -0.2s;
-        }
-    }
-    .sk-circle12 {
-        transform: rotate(330deg);
-
-        &::before {
-            animation-delay: -0.1s;
+            &::before {
+                animation-delay: #{-1.2 + math.div($i, 10)}s;
+            }
         }
     }
 }
